Fix cover being cropped in now-playing bar.

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -294,7 +294,7 @@
  color:var(--text-color);
 }
 
-.v-dialog .v-sheet, .v-list:not(.nd-list) {
+.v-dialog .v-sheet, .v-list:not(.nd-list):not(.np-bar-details) {
  background-color:var(--background-color) !important;
 }
 
